--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,21 @@ h1 {
 a {
   color: white;
 }
+
+p {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+}
+
+.links {
+  text-align: center;
+}
